fix leaderboard squish while modal is open

--- a/app/components/layouts/BaseLayout/BaseLayout.module.scss
+++ b/app/components/layouts/BaseLayout/BaseLayout.module.scss
@@ -5,5 +5,5 @@
 
   // DUM VALUE: should be calculated as: 2* sidebar paddingx + max(sidebarlink width)
   margin-left: $sidebar-width;
-
+  width: calc(100vw - $sidebar-width);
 }
